fix: 🐛 smaller devices spacing and loop video

--- a/src/components/Agentathon/Possibilities/style.module.css
+++ b/src/components/Agentathon/Possibilities/style.module.css
@@ -11,6 +11,8 @@
   text-align: center;
   max-width: 670px;
   padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 @media (min-width: 900px) {
@@ -20,5 +22,7 @@
 
   .title {
     padding-top: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
