--- a/src/components/Agentathon/Prizes/style.module.css
+++ b/src/components/Agentathon/Prizes/style.module.css
@@ -13,6 +13,8 @@
   width: 100%;
   text-align: center;
   padding-bottom: 60px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .prizeAmount {
@@ -43,6 +45,11 @@
 @media (min-width: 900px) {
   .prizeAmount {
     max-width: 480px;
+  }
+
+  .title {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .dots:nth-child(1) {
