--- a/src/components/Agentathon/SafeAgents/style.module.css
+++ b/src/components/Agentathon/SafeAgents/style.module.css
@@ -47,6 +47,8 @@
   max-width: 1000px;
   height: auto;
   padding-bottom: 20px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 @media (min-width: 900px) {
@@ -61,5 +63,10 @@
   .image {
     width: 242px;
     height: 242px;
+  }
+
+  .buildSafeAgents {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
