--- a/src/components/Agentathon/Tracks/style.module.css
+++ b/src/components/Agentathon/Tracks/style.module.css
@@ -19,6 +19,8 @@
   max-width: 909px;
   width: 100%;
   padding-bottom: 40px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .itemsWrapper {
@@ -138,5 +140,10 @@
 
   .supportedByLogos {
     gap: 40px;
+  }
+
+  .scrollContainer {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
